[package]
name = "dtls"
version = "0.1.0"
authors = ["Clark <clark.wood@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.3.2"
block-modes = "0.3.3"
bytes = "0.5.4"
byteorder = "1.3.4"
enum-primitive-derive = "^0.1"
hex = "0.4.2"
num = "0.2.1"
num-bigint-dig = "0.6.0"
num-traits = "^0.1"
rand_core = "0.5.1"
ring = "0.16.12"
sha2 = "0.8.1"
thiserror = "1.0.16"
tokio = { version = "0.2", features = ["full"] }
tokio-io = "0.1.13"